# capnp

./: Cargo.toml  build.rs  echo.capnp  memo.md  test.sh
src/: client.rs  http_server.rs  main.rs  message.rs  server.rs
