[package]
name = "capnp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
capnp = "0.20.3"
capnp-rpc = "0.20.3"
futures = "0.3.31"
tokio = { version = "1.43.0", features=["full"] }
tokio-util = {version = "0.7.13", features = ["compat"] }

[build-dependencies]
capnpc = "0.20.1"
